# git-genie

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  main.py  pyproject.toml  requirements.txt
examples/: explain_git_command_examples.json  generate_git_command_examples.json
git_genie/: main.py
