[tool.poetry]
name = "git-genie"
version = "0.2.0"
description = ""
authors = ["Daniel Palma <danivgy@gmail.com>"]
readme = "README.md"
packages = [{include = "git_genie"}]

[tool.poetry.scripts]
git-genie = "git_genie.main:app"
git-genie-pre-commit = "git_genie.main:pre_commit"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "0.9.0"}
langchain = "0.0.340"
openai = "1.3.5"
tiktoken = "0.5.1"
python-dotenv = "1.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
